package observerpattern.display;

/**
 * Created by Alex on 2/14/2016.
 */
public interface DisplayElement {

    void display();
}
